--- a/ks1.cfg
+++ b/ks1.cfg
@@ -7,7 +7,7 @@
 accepteula
 install --firstdisk --overwritevmfs
 rootpw VMware1!
-# network --bootproto=dhcp --device=vmnic0
+network --bootproto=dhcp --device=vmnic0
 reboot
 
 %pre --interpreter=busybox 
