--- a/ks1.cfg
+++ b/ks1.cfg
@@ -54,7 +54,7 @@ vim-cmd hostsvc/datastore/rename datastore1 "$(hostname -s)-local-storage-1"
 ########################################################################################################################
 # For troubleshooting only
 # Enable SSH and the ESXi Shell
-#vim-cmd hostsvc/enable_ssh
-#vim-cmd hostsvc/start_ssh
-#vim-cmd hostsvc/enable_esx_shell
-#vim-cmd hostsvc/start_esx_shell
+vim-cmd hostsvc/enable_ssh
+vim-cmd hostsvc/start_ssh
+vim-cmd hostsvc/enable_esx_shell
+vim-cmd hostsvc/start_esx_shell
