--- a/ks1.cfg
+++ b/ks1.cfg
@@ -7,13 +7,14 @@
 accepteula
 install --firstdisk --overwritevmfs
 rootpw VMware1!
-network --bootproto=dhcp --device=vmnic0
+# network --bootproto=dhcp --device=vmnic0
 reboot
 
 %pre --interpreter=busybox 
 
 %firstboot --interpreter=busybox 
 
+sleep 60;
 
 ####################################
 # Setup Networking based on MAC Address
@@ -25,7 +26,7 @@ MACADDR=$(esxcli network ip interface list |grep MAC | awk '{print $3}')
 # Find MAC Address to set 
 case `echo "${MACADDR}"` in
 "00:0c:29:c2:25:8d"*)
-	HOSTNAME="SiteA"
+	HOSTNAME="SiteAA"
 	IPADDR="192.168.10.240"
 	;;
 "00:0c:29:58:5d:d7"*)
